syntax="proto3";

option go_package = "./pb";

package chat;

import "user.proto";

message LoginRequest{
    User user =1;
}

message LoginResponse {
    string id =1;
}

service AuthService{
    rpc Login(LoginRequest) returns (LoginResponse) {};
}

service NewUserCreate{
    rpc NewUserCreate(LoginRequest) returns (LoginResponse) {};
}
